<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FrontalDatosContacto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/confirmar_datos"
        android:textStyle="bold"
        android:textSize="@dimen/texto"
        android:gravity="center"/>


    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="match_parent"
        android:layout_height="@dimen/texto"
        android:gravity="center_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:text="@string/txt_fecha"
            android:gravity="center" />
        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:text="@string/fecha_nacimiento"
            android:layout_marginLeft="@dimen/left"
            android:gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:text="@string/txt_telefono"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvtelefono"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:layout_marginLeft="@dimen/left"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:text="@string/txt_email"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvemail"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:layout_marginLeft="@dimen/left"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:text="@string/txt_descripcion"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvdescripcion"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/texto"
            android:layout_marginLeft="@dimen/left"
            android:gravity="center"/>
    </LinearLayout>



    <Button
        android:id="@+id/btback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_editar_datos"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorBotones" />

</LinearLayout>
